--- a/pom.xml
+++ b/pom.xml
@@ -32,8 +32,12 @@
             <version>5.9.3</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>io.qameta.allure</groupId>
+            <artifactId>allure-junit5</artifactId>
+            <version>2.24.0</version>
+        </dependency>
     </dependencies>
-
 
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
