--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,11 @@
             <version>5.9.3</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>io.qameta.allure</groupId>
+            <artifactId>allure-junit5</artifactId>
+            <version>2.13.8</version>
+        </dependency>
     </dependencies>
 
 
